serveral fix for the sed and copy command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,7 +239,7 @@ jobs:
                 echo "==> Build.prop extracted successfully"
                 
                 # Modify the build.prop file
-                sed -i "s|ro\.build\.id=.*|ro.build.display.id=Built.By.Minh2077.Script|g" current_build.prop
+                sed -i "s|ro\.build\.id=.*|ro.build.id=Built.By.Minh2077.Script|g" current_build.prop
                 echo "==> Build.prop modified"
                 
                 # Write it back using debugfs
@@ -357,7 +357,7 @@ jobs:
           ```
           ### On Windows (Command Prompt):
           ```cmd
-          copy /b repacked_super_*.tar.00 + repacked_super_*.tar.01 + ... repacked_super.tar
+          copy /b repacked_super_*.tar.* repacked_super.tar
           ```
 
           ### Source Files
